# easy-langent-change

./: .env.example  README.md  pyproject.toml  requirements.txt
docs/.vitepress/: config.mts
docs/guide/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter6.md  chapter7.md  前言.md
project/PersonalMemoryAssistant/: LICENSE  README.md  memory_store.json
project/PersonalMemoryAssistant/backend/: .env.example  assistant.py  personal_memory_assistant.py  requirements.txt  server.py
project/PersonalMemoryAssistant/frontend/: app.js  index.html  styles.css
project/RecruitingInterviewAgentDemo/: LICENSE  Readme.md  RecruitingInterviewAgent.py
project/TicketReviewAgentDemo/: LICENSE  Readme.md  TicketReviewAgent.py
src/code/: chapter1.ipynb  chapter4.ipynb
